# TinyOAuth2.0PoC_AuthorizationServer

./: .gitignore  Cargo.toml  TMP_speint  dockerfile  main.py  readme.md  routes.py  start_authorization_server.sh
db/: clients.db  users.db
endpoints/: authorize.py
legacy/db/: .gitignore
legacy/routes/authorize_code_flow/: authentication.py  authorization.py  exchangeToken.py
legacy/template/: error.html
routes/: routes.py
routes/authorize_code_flow/: authenticate.py  authentication.py  authorization.py  authorize.py
src/: main.rs  mods.rs
src/mods/: db.rs  services.rs  util.rs
src/mods/config/: config.rs
src/mods/db/: models.rs  repository.rs  seed.rs
src/mods/routes/: routes.rs
src/mods/services/: authentication.rs  authorization.rs  token.rs
src/mods/util/: db.rs  request.rs  response.rs
src/mods/util/file/: file.rs
src/mods/util/request/: authentication.rs  authorization.rs  versatale.rs
src/mods/util/response/: authentication.rs  authorization.rs  token.rs  versatale.rs
template/: authenticate.html  authorize.html
templates/: authorize_page.html  login_page.html
util/: CheckRequest.py  assembleResponse.py  client.py  http.py  registered.py  request.py  user.py
util/db/: client.py  user.py
util/model/: client.py  user.py
